# enzanlab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: mem_spectrum.md
examples/correlation/: demo_sliding_autocorrelation.py
examples/decompose/: demo_ssa.py
examples/dmd/: simple_onlinedmd.py
examples/geometry/: geodesic_tracker_example.py
examples/spectrum/: demo_mem_spectrum.py
examples/viz/: demo_live_plotter.py
src/enzanlab/: __init__.py
src/enzanlab/math/correlation/: fft_based.py  online.py
src/enzanlab/math/decompose/: ssa.py
src/enzanlab/math/dmd/: hankel.py  hankel_onlinedmd.py  online_dmd.py  plot.py
src/enzanlab/math/geometry/: geodesic_tracker.py
src/enzanlab/signal/filters/: sideband.py
src/enzanlab/signal/spectrum/: mem_spectrum.py
src/enzanlab/viz/: live_plotter.py
tests/math/correlation/: test_fft_based.py  test_online_autocorrelation.py
tests/math/dmd/: test_hankel_onlinedmd.py
tests/math/geometry/: test_geodesic_tracker.py
tests/signal/filters/: test_sideband.py
tests/signal/spectrum/: test_mem_spectrum.py
tests/viz/: test_live_plotter.py
